--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
               <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="blog">Blog</a>
+              <a class="nav-link" href="blog">Blog</a>
             </li>
           </ul>
         </div>
