--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,11 +39,11 @@
         </div>
       </nav>
 
-      <div class = contrainer">
+      <div class = container">
 
       {{ content }}
 
-      </div><!-- /.contrainer -->
+      </div><!-- /.container -->
       
       <hr>
       
