--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,9 @@
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="https://anlattner.github.io/DoPagesWork/">We're The Worst</a>
+        <a class="navbar-brand" href="https://anlattner.github.io/DoPagesWork/">Does This Work?</a>
 
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <div class="collapse navbar-collapse" id="navbarMain">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="https://anlattner.github.io/DoPagesWork/">Home <span class="sr-only">(current)</span></a>
