--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,10 +30,10 @@
               <a class="nav-link" href="https://anlattner.github.io/DoPagesWork/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="About">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="blog">Blog</a>
+              <a class="nav-link" href="Blog">Blog</a>
             </li>
           </ul>
         </div>
